java view is sh